--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <link rel="icon" href="images/c.PNG">
+    <link rel="icon" href="images/c.png">
     <title>Profile :: Kamlesh Karki</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
