--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <div class="inner-sec-w3ls py-lg-5 py-3">
                 <h4 class="sub-tittle-w3 text-uppercase text-center">Find Me</h4>
-                <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center text-white">Contact Me Now</h3>
+                <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center text-white">Contact Me </h3>
 
                 <div class="contact_grid_right">
                     <form action="https://formspree.io/f/meqpkdvl" enctype="multipart/form-data" method="post">
