--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </div>
                             <div class="address-right text-center">
                                 <h6 class="my-3">Address</h6>
-                                <p> Magarpatta City Pune Hadpsur
+                                <p> Magarpatta City Hadpsur Pune
 
                                 </p>
                             </div>
