--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 <div class="card-body">
                                                     <i class="far fa-lightbulb mb-4"></i>
                                                     <h5 class="card-title text-uppercase">Creative Ideas</h5>
-                                                    <p class="card-text">Design and develop a batter platefrom for intregattion tool and technology. </p>
+                                                    <p class="card-text">Design and develop a batter platefrom for integration tool and technology. </p>
                                                     <a href="https://github.com/kamleshkarki" target="_blank" aria-hidden="true"></i>More</a>
                                                 </div>
                                             </div>
