--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="banner-info text-uppercase">
                 <h6 data-aos="fade-right">Introduction</h6>
-                <h5 data-aos="fade-right">Hello, my name is Kamlesh</h5>
+                <h5 data-aos="fade-right">hello user</h5>
                 <h3 data-text="I'm a BI DEVELOPER & DATA ANALYST">I'm a BI DEVELOPER & DATA ANALYST</h3>
                 <div class="ban-buttons mt-3" data-aos="fade-right">
                     <a class="btn work scroll" href="#projects">My Work</a>
