--- a/index.html
+++ b/index.html
@@ -847,7 +847,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         $(document).ready(function() {
 
             var events = [{
-                    date: 'Jan 2020 - Mar 2020',
+                    date: '2021 - Present',
+                    content: 'SakSoft <small>Business Intelligence Consultant</small>'
+                },
+
+                {
+                    date: '2020 - 2020',
                     content: 'RBL Bank <small>Business Intelligence Developer</small>'
                 },
                 {
