--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="testimonials_grid center">
                             <div class="testimonials_grid-inn text-uppercase">
                                 <i class="fas fa-quote-left"></i>
-                                <p>US Election Results 2020 live: Biden closes gap with Trump in Georgia and Pennsylvania</p>
+                                <p>Maharashtra New Chief Minister : Eknath Shinde</p>
                                 <a href="">
                             </div>
                             <h3>United States Election</h3>
