--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Maharashtra New Chief Minister : Eknath Shinde</p>
                                 <a href="">
                             </div>
-                            <h3>United States Election</h3>
+                            <h3>Maharashtra New Chief Minister</h3>
 
                             <label>graphicnews</label>
                         </div>
