--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="testimonials_grid center">
                             <div class="testimonials_grid-inn text-uppercase">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Maharashtra New Chief Minister 2022 : Eknath Shinde</p>
+                                <p>Maharashtra New Chief Minister 2022</p>
                                 <a href="">
                             </div>
-                            <h3>Maharashtra New Chief Minister</h3>
+                            <h3>Eknath Shinde :: Since 30 June 2022</h3>
 
                             <label>graphicnews</label>
                         </div>
