--- a/index.html
+++ b/index.html
@@ -696,6 +696,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
+					
+			<li>
+                            <a href="https://techtogs.blogspot.com/"  target="_blank">
+                                <i class="fas fa-blog"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
