--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					
 			<li>
                             <a href="https://techtogs.blogspot.com/"  target="_blank">
-                                <i class="fas fa-blog"></i>
+                                <i class="fa-brands fa-blogger"></i>
                             </a>
                         </li>
                     </ul>
