--- a/index.html
+++ b/index.html
@@ -664,9 +664,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <hr>
             <div class="d-flex justify-content-between pt-lg-3  footer-bottom-cpy">
                 <div class="copy-right-w3ls">
-                    <p>© 2020-2022 Kamlesh Karki. <a href="https://drive.google.com/open?id=13LYH1I1XZNIbHiEiAlAhrZ-8xALE3CD1" target="_blank">My Resume</a>
-                        <!-- <a href="http://w3layouts.com/"> W3layouts </a>
- -->
+                    <p>© 2022-2024 Kamlesh Karki. <a href="https://drive.google.com/open?id=13LYH1I1XZNIbHiEiAlAhrZ-8xALE3CD1" target="_blank">My Resume</a>
+                        <!-- <a href="http://w3layouts.com/"> W3layouts </a>-->
                     </p>
                 </div>
                 <div class="social-content pb-md-0 pb-4">
