--- a/index.html
+++ b/index.html
@@ -695,6 +695,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="fab fa-blogger"></i>
                             </a>
                         </li>
+			<li>
+                            <a href="https://youtube.com/channel/UCtQAGTCfZnGVgLfHUOmykog"  target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </li>							
                     </ul>
                 </div>
             </div>
