--- a/index.html
+++ b/index.html
@@ -851,7 +851,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         $(document).ready(function() {
 
             var events = [{
-                    date: '2021 - Present',
+                    date: '2024 - Present',
+                    content: 'Accenture <small>Data Enginner- Sr Analyst</small>'
+                },
+		    {
+                    date: '2021 - 2024',
                     content: 'SakSoft <small>Business Intelligence Consultant</small>'
                 },
 
