--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 },
 		    {
                     date: '2021 - 2024',
-                    content: 'SakSoft <small>Business Intelligence Consultant</small>'
+                    content: 'SakSoft <small>BI Consultant</small>'
                 },
 
                 {
